# gamescope-wayland-client

./: Cargo.toml  README.md
protocol/: gamescope-action-binding.xml  gamescope-commit-queue-v1.xml  gamescope-control.xml  gamescope-input-method.xml  gamescope-pipewire.xml  gamescope-private.xml  gamescope-reshade.xml  gamescope-swapchain.xml  gamescope-tearing-control-unstable-v1.xml  gamescope-xwayland.xml  xx-color-management-v3.xml
src/: lib.rs
src/mangoapp/: message.rs  queue.rs  sysvipc.rs
