[package]
name = "gamescope-wayland-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.9.1"
libc = "0.2.172"
packed_struct = "0.10.1"
thiserror = "2.0.12"
wayland-backend = "0.3.10"
wayland-client = "0.31.10"
wayland-scanner = "0.31.6"
